Noteworthy changes in version 0.9.12
-------------------------------------------------


Noteworthy changes in version 0.9.11 (2005-04-20)
-------------------------------------------------

 * New convenience API function for the subjectKeyIdentifier.

 * Implemented the keyIdentifier part for authorityKeyIdentifier of
   CRLs and certificates.

 * Reason codes for CRL items are now returned.

 * Interface changes relative to the 0.9.7 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_cert_get_subj_key_id            NEW.


Noteworthy changes in version 0.9.10 (2004-12-03)
-------------------------------------------------

 * Fixed a CMS parsing bug.


Noteworthy changes in version 0.9.9 (2004-09-27)
------------------------------------------------

 * Fixed a couple of bugs which caused parsing errors with some
   certificates.


Noteworthy changes in version 0.9.8 (2004-07-22)
------------------------------------------------

 * Fixed a bug in the OCSP request generation.


Noteworthy changes in version 0.9.7 (2004-06-08)
------------------------------------------------

 * New API function to add arbitrary extensions to pkcs#10 requests.

 * Interface changes relative to the 0.9.6 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_certreq_add_extension           NEW.


Noteworthy changes in version 0.9.6 (2004-04-29)
------------------------------------------------

 * New API functions to support v2 CRLs.

 * Interface changes relative to the 0.9.5 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_crl_get_extension               NEW.
ksba_crl_get_auth_key_id             NEW.
ksba_crl_get_crl_number              NEW.

Noteworthy changes in version 0.9.5 (2004-04-06)
------------------------------------------------

 * New APIs to get hands on some more information.

 * Interface changes relative to the 0.9.4 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_ocsp_get_responder_id           NEW.